update in maths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "*html": "html",
         "stdlib.h": "c",
-        "cQueue_array.C": "cpp"
+        "cQueue_array.C": "cpp",
+        "BIN_DEC.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
